# fast-task

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci_cd.yml
src/: config.rs  jira_client.rs  main.rs
