[package]
name = "fast-task"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0"
dirs = "6.0.0"
inquire = "0.9.1"
validator = "0.20"
